--- a/index.html
+++ b/index.html
@@ -4,34 +4,82 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">		
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-	<!--<link rel="stylesheet" type="text/css" href="css/main.css">-->
 	<title>Viajador</title>
+	
+	<script  src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 	<script src="JS/myJavaScript.JS"></script>
+	<style type="stylesheet" src="css/miestilo.css"></style>
 </head>
 <body>
 	<div><h1>calculador de hotel</h1></div>
-	<div>	
+	
+	<!-- acceso  -->
+	<button id="ingresar">acceso para admins</button>
+	
+
+
+	<div id="tazaIngreso " class="panelinvisible ">
+		<h1>panel de acceso para admins </h1>
 		<div class="input-group mb-3">
-  			<span class="input-group-text" id="basic-addon1"> Hotel </span>
-  			<input type="text" class="form-control" placeholder="Nombre de hotel" aria-label="Nombre de hotel" aria-describedby="basic-addon1" id="nameHotel">
+	  		<span class="input-group-text" id="basic-addon1"> usuario </span>
+	  		<input id="leeUsu" type="text" class="form-control" placeholder="usuario">
 		</div>
 		<div class="input-group mb-3">
-  			<span class="input-group-text" id="basic-addon1"> precio </span>
-  			<input id="precioHotel" type="number" class="form-control" placeholder="El precio de las dobles es el simple + 30%" aria-label="El precio de las dobles es el simple + 30%" aria-describedby="basic-addon1">
+	  		<span class="input-group-text" id="basic-addon1"> contraseña </span>
+	  		<input id="leeCont" type="text" class="form-control" placeholder="contraseña" >
 		</div>
-		<div class="input-group mb-3">
-  			<span class="input-group-text" id="basic-addon1"> Simples </span>
-  			<input id="simpleRoom" type="number" class="form-control" placeholder="habitaciones simples" aria-label="habitaciones simples" aria-describedby="basic-addon1">
+		<button id="iUsu"> ingresar </button>
+	</div>	
+	<!--principal -->
+
+	<div class="row">
+		<div class="col-8">
+			<select class="form-select" aria-label="Default select example">
+  				<option selected>Open this select menu</option>
+  				<div id="selectorHto"></div><!-- aca se escribe la lista de hoteles que viene del json  -->
+			</select>
+			<div class="input-group mb-3">
+	  			<span class="input-group-text" id="basic-addon1"> Simples </span>
+	  			<input id="simpleRoom" type="number" class="form-control" placeholder="habitaciones simples" aria-label="habitaciones simples" aria-describedby="basic-addon1">
+			</div>
+			<div class="input-group mb-3">
+	  			<span class="input-group-text" id="basic-addon1"> Dobles </span>
+	  			<input id="dobleRoom" type="number" class="form-control" placeholder="habitaciones Dobles" aria-label="habitaciones Dobles" aria-describedby="basic-addon1">
+			</div>
+			<button class="btn btn-primary" id="calculate" type="submit" > Calular </button>
 		</div>
-		<div class="input-group mb-3">
-  			<span class="input-group-text" id="basic-addon1"> Dobles </span>
-  			<input id="dobleRoom" type="number" class="form-control" placeholder="habitaciones Dobles" aria-label="habitaciones Dobles" aria-describedby="basic-addon1">
+		<div class="col-4">
+			<div id="escri"><!-- escritura --></div>
+			<div id="escri2"><!-- escritura --></div>
 		</div>
-		<button class="btn btn-primary" type="submit" onclick="calcu()"> Calular </button>
 	</div>
+	<div class="row" style="background-color:gray; padding: 10px;"><!--aca esta el panel solo admin -->
+		<div class="col-8">
+			<!--aca esta el formulario de carga para hoteles , cada hotel tiene como id nombre en valores precio, ubicacion y numero de tel-->
 
-	<div id="escri"><!-- escritura --></div>
-	<div id="escri2"><!-- escritura --></div>
+			<div class="mb-3"> <!--nombre hotel-->
+    			<label for="nombreHotelCarga" class="form-label">Nombre del hotel</label>
+    			<input type="text" class="form-control" id="nombreHotelCarga">
+			</div>
+			<div class="3mb-3"> <!--email hotel -->
+    			<label for="emailHotel" class="form-label">Correo del hotel </label>
+    			<input type="email" class="form-control" id="emailHotel">
+    		</div>
+			<div class="mb-3"> <!--nombre hotel-->
+    			<label for="phoneHotel" class="form-label">Correo electrónico</label>
+    			<input type="number" class="form-control" id="phoneHotel">
+			</div>
+			<div class="mb-3"> <!--nombre hotel-->
+    			<label for="hotelPrice" class="form-label">precio de habitacion</label>
+    			<input type="number" class="form-control" id="hotelPrice" placeholder="el precio de las dobles es el simplple + 25%? ">
+			</div>
 
+
+		</div>
+		<div class="col-4" id="hotelAdminList">
+			<!--aca esta la lista de hoteles -->
+
+		</div>
+	</div>
 </body>
 </html>
