--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 
 
-	<div id="tazaIngreso " class="panelinvisible ">
+	<div id="tazaIngreso " class="panel">
 		<h1>panel de acceso para admins </h1>
 		<div class="input-group mb-3">
 	  		<span class="input-group-text" id="basic-addon1"> usuario </span>
